# rust-jq

./: Cargo.toml  README.md
src/: ffi_jq.rs  ffi_jv.rs  jq.rs  lib.rs
tests/: lib.rs
